# v2rayNG

./: .gitignore  .gitmodules  11991  Alirezatoky  CR.md  NPV_README.md  README.md  ali  ali3051241  compile-hev-socks5-tunnel.sh  compile-hevtun.bat  compile-hevtun.sh  compile-libxray.sh  compile-tun2socks.sh  dependabot.yml  fix_headers.bat  gitupdate.bat  jkm  libhysteria2.sh  npv_build_x2ray.sh  renovate.json  reza  tun2socks.mk  update  version.json  اسکوچر
.codegraph/: .gitignore
.github/: FUNDING.yml  dependabot.yml  issue_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_cn.md  config.yml
.github/actions/setup/: action.yml
.github/workflows/: CD  CI  android.yml  build-android.yml  build-custom.yml  build.yml  build2.yml  ci.yml  coba.yml  debug.yml  dependencies.yml  fastlane.yml  jekyll-docker.yml  main.yml  nightly.yml  prerelease.yml  release.yml
AndroidLibV2rayLite/: .gitignore  .travis.yml  Makefile  README.md  compile-tun2socks.sh  gen_assets.sh  go.mod  go.sum  interact.go  libv2init.go  libv2ray.go  readme.txt  tun2socks.mk  ubuntu-cli-install-android-sdk.sh  v2logger.go
AndroidLibV2rayLite/CoreI/: Status.go
AndroidLibV2rayLite/Process/Escort/: escort.go
AndroidLibV2rayLite/VPN/: vpnservice_support.go  vpnservice_support_test.go
AndroidLibV2rayLite/shippedBinarys/: Makefile  firstrun.go
AndroidLibV2rayLite/shippedBinarys/ArchDep/arm/: tun2socks
ExtRes/values/: strings.xml
ExtRes/values-vi/: strings.xml
ExtRes/values-zh-rCN/: strings.xml
V2rayNG/: .gitignore  FIXES_SUMMARY.md  agent.md  build.gradle  build.gradle.kts  clean-and-build.bat  clean-and-build.sh  final-test.ps1  fix-gradle-issues.bat  fix-gradle-issues.ps1  fix-sdk-issues.ps1  gradle.properties  gradlew  gradlew.bat  release.properties  settings.gradle  settings.gradle.kts  test-build.ps1
V2rayNG/app/: .gitignore  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
V2rayNG/app/debug/: output-metadata.json
V2rayNG/app/libs/: Readme.md
V2rayNG/app/libs/arm64-v8a/: hev-socks5-tunnel-bin
V2rayNG/app/libs/armeabi-v7a/: hev-socks5-tunnel-bin
V2rayNG/app/libs/x86/: hev-socks5-tunnel-bin
V2rayNG/app/libs/x86_64/: hev-socks5-tunnel-bin
V2rayNG/app/release/: output-metadata.json
V2rayNG/app/src/debug/: google-services.json
V2rayNG/app/src/dev/res/values/: strings.xml
V2rayNG/app/src/fdroid/res/values/: strings.xml
V2rayNG/app/src/fdroid/res/xml/: shortcuts.xml
V2rayNG/app/src/main/: AndroidManifest.xml
V2rayNG/app/src/main/assets/: applications_direct_cn  applications_direct_ir  applications_proxy_ir  custom_routing_black  custom_routing_block  custom_routing_direct  custom_routing_direct_cn  custom_routing_direct_ir  custom_routing_global  custom_routing_proxy  custom_routing_proxy_cn  custom_routing_proxy_ir  custom_routing_white  custom_routing_white_iran  custom_routing_white_russia  custom_routing_white_russia_lite  index.html  open_source_licenses.html  proxy_package_name  proxy_packagename.txt  v2ray_config.json  v2ray_config_with_tun.json
V2rayNG/app/src/main/assets/sing-box/: README.txt
V2rayNG/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
V2rayNG/app/src/main/helper/: SimpleItemTouchHelperCallback.kts
V2rayNG/app/src/main/jni/: Android.mk  Application.mk
V2rayNG/app/src/main/kotlin/SpeedUpVPN/: VpnEncrypt.kt
V2rayNG/app/src/main/res/: values-bqi
V2rayNG/app/src/main/res/anim/: button_pulse.xml  cloud_float.xml  fade_in.xml  fade_out.xml  shake.xml
V2rayNG/app/src/main/res/color/: btn_bg_color_selector.xml  btn_stroke_color_selector.xml  btn_text_color_selector.xml  color_highlight_material.xml
V2rayNG/app/src/main/res/color-v21/: color_highlight_material.xml
V2rayNG/app/src/main/res/drawable-anydpi/: ic_stat_name.xml
V2rayNG/crsgw/: build.gradle.kts
V2rayNG/dpreference/: build.gradle
V2rayNG/dpreference/src/main/: AndroidManifest.xml
V2rayNG/gradle/: libs.versions.toml
V2rayNG/gradle/wrapper/: gradle-wrapper.properties
docs/: AGENTS.md
docs/rfcs/: multi-core-engine-rfc.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
tests/: test_invariant_ProcessService.kt
(+1164 files in other folders)
